// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NoticeBar should render custom style 1`] = `
RenderContext {
  "0": VNode {
    "attributes": Object {
      "bgColor": "#4c4c4c",
      "color": "#bd9e6f",
      "text": "通知内容通知内容通知内容通知内容通知内容通知内容通知内容",
    },
    "children": Array [],
    "key": undefined,
    "nodeName": [Function],
  },
  "length": 1,
}
`;

exports[`NoticeBar should render different action 1`] = `
RenderContext {
  "0": VNode {
    "attributes": undefined,
    "children": Array [
      VNode {
        "attributes": Object {
          "action": "去看看",
          "text": "通知内容通知内容通知内容通知内容通知内容通知内容通知内容",
        },
        "children": Array [],
        "key": undefined,
        "nodeName": [Function],
      },
      VNode {
        "attributes": Object {
          "action": VNode {
            "attributes": undefined,
            "children": Array [
              "去看看",
            ],
            "key": undefined,
            "nodeName": "div",
          },
          "text": "通知内容通知内容通知内容通知内容通知内容通知内容通知内容",
        },
        "children": Array [],
        "key": undefined,
        "nodeName": [Function],
      },
    ],
    "key": undefined,
    "nodeName": "div",
  },
  "length": 1,
}
`;

exports[`NoticeBar should render different icon 1`] = `
RenderContext {
  "0": VNode {
    "attributes": undefined,
    "children": Array [
      VNode {
        "attributes": Object {
          "icon": false,
          "text": "禁用图标通知内容通知内容通知内容通知内容通知内容通知内容通知内容",
        },
        "children": Array [],
        "key": undefined,
        "nodeName": [Function],
      },
      VNode {
        "attributes": Object {
          "icon": "more",
          "text": "自定义图标通知内容通知内容通知内容通知内容通知内容通知内容通知内容",
        },
        "children": Array [],
        "key": undefined,
        "nodeName": [Function],
      },
    ],
    "key": undefined,
    "nodeName": "div",
  },
  "length": 1,
}
`;

exports[`NoticeBar should render different type 1`] = `
RenderContext {
  "0": VNode {
    "attributes": undefined,
    "children": Array [
      VNode {
        "attributes": Object {
          "text": "提醒类型通告栏，带有一定警示性，用于可能发生误操作或提醒用户的情况",
          "type": "warning",
        },
        "children": Array [],
        "key": undefined,
        "nodeName": [Function],
      },
      VNode {
        "attributes": Object {
          "text": "错误类型通告栏，用于发生了错误操作或有重要警示信息时使用",
          "type": "error",
        },
        "children": Array [],
        "key": undefined,
        "nodeName": [Function],
      },
      VNode {
        "attributes": Object {
          "text": "成功类型通告栏，用于成功操作后的页面提醒或一些温馨提醒，相对柔和",
          "type": "success",
        },
        "children": Array [],
        "key": undefined,
        "nodeName": [Function],
      },
    ],
    "key": undefined,
    "nodeName": "div",
  },
  "length": 1,
}
`;

exports[`NoticeBar should render properly 1`] = `
RenderContext {
  "0": VNode {
    "attributes": Object {
      "text": "txt1",
    },
    "children": Array [],
    "key": undefined,
    "nodeName": [Function],
  },
  "length": 1,
}
`;

exports[`NoticeBar should render properly 2`] = `
RenderContext {
  "0": VNode {
    "attributes": Object {
      "text": "txt2",
    },
    "children": Array [],
    "key": undefined,
    "nodeName": [Function],
  },
  "length": 1,
}
`;

exports[`NoticeBar should render properly 3`] = `
RenderContext {
  "0": VNode {
    "attributes": Object {
      "text": "txt2",
    },
    "children": Array [],
    "key": undefined,
    "nodeName": [Function],
  },
  "length": 1,
}
`;

exports[`NoticeBar should render without scrollable 1`] = `
RenderContext {
  "0": VNode {
    "attributes": Object {
      "scrollable": false,
      "text": "通知内容通知内容通知内容通知内容通知内容通知内容通知内容",
      "wrapable": false,
    },
    "children": Array [],
    "key": undefined,
    "nodeName": [Function],
  },
  "length": 1,
}
`;

exports[`NoticeBar should render wrappable 1`] = `
RenderContext {
  "0": VNode {
    "attributes": Object {
      "text": "通知内容通知内容通知内容通知内容通知内容通知内容通知内容",
      "wrapable": true,
    },
    "children": Array [],
    "key": undefined,
    "nodeName": [Function],
  },
  "length": 1,
}
`;
